# attestx

./: .gitignore  Cargo.toml  README.md
contracts/abi/: EAS.json  SchemaRegistry.json
src/: consts.rs  eas.rs  lib.rs  main.rs  models.rs  utils.rs
