[package]
name = "attestx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { version = "2.0.10", features = [
    "abigen",
    "rustls",
    "ws",
    "ethers-solc",
] }
tokio = { version = "1.15.0", features = ["macros", "rt-multi-thread"] }

eyre = "0.6.8"

dotenvy = "0.15.7"

hex = "0.4.3"
anyhow = "1.0.79"
